--- a/index.html
+++ b/index.html
@@ -1,71 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="es-ES">
 <head>
-    <title>MyPage</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Luis Navarro</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/landing.css">
 </head>
 <body>
     <!-- Nav bar -->
-    <nav class="navbar navbar-light fixed-top bg-light">
+    <nav class="navbar navbar-dark fixed-top bg-black">
         <div class="container">
             <a class="navbar-brand" href="#">
                 Luis Navarro
             </a>
-             <ul class="navbar-nav navbar-expand-lg ml-auto mt-2 mt-lg-0">
+            <ul class="navbar-nav navbar-expand-lg ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active text-uppercase">
-                    <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ml-2">
                     <a href="#about" class="nav-link text-uppercase">
-                        About
+                        Acerca de
                     </a>
                 </li>
                 <li class="nav-item ml-2">
-                    <a href="#services" class="nav-link text-uppercase">
-                        Services
+                    <a href="#skills" class="nav-link text-uppercase">
+                        Hábilidades
                     </a>
                 </li>
                 <li class="nav-item ml-2">
                     <a href="#portfolio" class="nav-link text-uppercase">
-                        Portfolio
+                        Portafolio
                     </a>
                 </li>
                 <li class="nav-item ml-2">
                     <a href="#pricing" class="nav-link text-uppercase">
-                        Pricing
+                        Precios
                     </a>
                 </li>
                 <li class="nav-item ml-2">
                     <a href="#blog" class="nav-link text-uppercase">
-                        Blog
+                        Galería
                     </a>
                 </li>
                 <li class="nav-item ml-2">
                     <a href="#contact" class="nav-link text-uppercase">
-                        Contact
+                        Contácto
                     </a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <header class="jumbotron" id="home">
+    <header class="jumbotron bg-dark-gray" id="home">
         <div class="container mt-5">
             <div class="row">
                 <div class="col-sm-6 heading-items">
-                    <p>This is me</p>
-                    <h1 class="text-uppercase">Luis Navarro</h1>
-                    <p>You will being realise why this exercise is called the Dickens Pattern with reference to the ghost show Scroge some different futures</p>
-                    <button class="btn btn-layout">
+                    <p class="m-0">
+                        <small>
+                            Programador de sistemas
+                        </small>
+                    </p>
+                    <h1 class="text-uppercase p-0 mb-3">
+                        Luis Navarro
+                    </h1>
+                    <p class="mt-3 mb-3">
+                        Me dedico al desarrollo de software desde 2014, he trabajado para importantes organizaciones, en las que he aportado mi conocimiento al igual de haber adquirido grandes experiencias
+                    </p>
+                    <button class="btn btn-gray mt-5">
                         <span class="text-uppercase">
-                            Discover Now
+                            Contáctame
                         </span>
                     </button>                        
                 </div>
                 <div class="col-sm-6">
-                    <img class="heading-img" src="https://images.unsplash.com/photo-1511226964783-53427a67e5fb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80">
+                    <img class="heading-img" src="images/IMG_20200528_194542_770.jpg">
                 </div>
             </div>
         </div>
@@ -74,32 +83,41 @@
     <section class="container section" id="about">
         <div class="row mt-5 mb-5">
             <div class="col-sm-6">
-                <img class="about-img" src="https://images.unsplash.com/36/X7L5hgFXQZazzPaK3goC_14084990857_88cabf3b6d_o.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
+                <img class="about-img" src="images/IMG_20190223_142947_900.jpg">
             </div>
             <div class="col-sm-6 p-5">
                 <p class="text-uppercase">
-                    About Me
+                    Acerca de mi
                 </p>
                 <h2 class="font-weight-bold text-uppercase">
-                    Personal Details
+                    Detalles personales
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur.</p>
-                <a class="btn btn-layout" href="#">
+                <!-- <p>
+                    Estudiante del Instituto Tecnológico Superior de Teziutlán de la carrera de Informática.
+                </p> -->
+                <ul style="padding-left: 1.3rem;">
+                    <li class="list-skill">
+                        <b>2014</b> Egreasado del Instituto Tecnológico Superior de Teziutlán de la carrera de Informática.
+                    </li>
+                    <li class="list-skill">
+                        <b>2016</b> Trabajar para Grupo Jobo y el proyecto JOBOMAS+.
+                    </li>
+                    <li class="list-skill">
+                        <b>2020</b> Colaborador de Cuantix.com
+                    </li>
+                </ul>
+                <!-- <a class="btn btn-layout" href="#">
                     <span class="text-uppercase">
                         View Full Details
                     </span>
-                </a>
+                </a> -->
             </div>
         </div>
     </section>
 
-    <section class="container section" id="services">
+    <section class="container section" id="skills">
         <h2 class="font-weight-bold text-center">
-            My Offered Services
+            Mis hábilidades principales
         </h2>
         <p class="text-center">
             At about this time of year, some months after New Year's resolutions have been made and kept,or made and neglected
@@ -297,12 +315,12 @@
         </div>
     </section>
 
-    <section class="jumbotron section">
+    <section class="jumbotron bg-layout section">
         <div class="container">
-            <h2 class="font-weight-bold text-center">
+            <h2 class="font-weight-bold text-white text-center">
                 Client's Feedback About Me
             </h2>
-            <p class="text-center">
+            <p class="text-center text-white">
                 It is very easy to start smoking but is an uphill task to quit it. Ask any chain smoker or even aperson.
             </p>
             <div class="row">
@@ -361,7 +379,7 @@
         <p class="text-center">
             When someone does something that they know that they shouldn't do, did they.    
         </p>
-        <div class="jumbotron p-0">
+        <div class="jumbotron bg-layout text-white p-0">
             <div class="row">
                 <div class="col-sm-3 pricing-item">
                     <img src="https://picsum.photos/100/100" class="rounded-circle">
@@ -375,7 +393,7 @@
                             For the individuals
                         </small>
                     </p>
-                    <ul class="list-group pt-3">
+                    <ul class="list-group list-group-flush pt-3">
                         <li class="list-group-item">
                             Secure Online Transfer
                             </li>
@@ -404,7 +422,7 @@
                             For the individuals
                         </small>
                     </p>
-                    <ul class="list-group pt-3">
+                    <ul class="list-group list-group-flush pt-3">
                         <li class="list-group-item">
                             Secure Online Transfer
                             </li>
@@ -433,7 +451,7 @@
                             For the individuals
                         </small>
                     </p>
-                    <ul class="list-group pt-3">
+                    <ul class="list-group list-group-flush pt-3">
                         <li class="list-group-item">
                             Secure Online Transfer
                             </li>
@@ -462,7 +480,7 @@
                             For the individuals
                         </small>
                     </p>
-                    <ul class="list-group pt-3">
+                    <ul class="list-group list-group-flush pt-3">
                         <li class="list-group-item">
                             Secure Online Transfer
                             </li>
@@ -523,7 +541,7 @@
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud.</p>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 text-right">
                     <p>
                         <b>
                             About me
@@ -533,11 +551,11 @@
                         Stay updated with our latest trends
                     </p>
                     <div class="row">
-                        <div class="col-sm-8">
+                        <div class="col-sm-8 ml-auto">
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
-                                    <button class="btn btn-layout" type="button">Send</button>
+                                    <button class="btn btn-gray" type="button">Send</button>
                                 </div>
                             </div>
                         </div>
@@ -547,9 +565,9 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/general.js"></script>
 </body>
 </html>
